--- a/src/app/validator/validators/validators.component.html
+++ b/src/app/validator/validators/validators.component.html
@@ -13,36 +13,11 @@
             <i nz-icon nzType="plus"></i>
             创建
         </button>
+ 
+        <app-export *nzSpaceItem  [href]="'/app/alarm/api/validator/export'"></app-export>
 
-        <button nz-button nzType="primary" *nzSpaceItem class="btn">
-            <span nz-icon nzType="cloud-download" nzTheme="outline"></span>
-            <a (click)="handleExport()" download="filename" [href]="href"
-                >导出</a
-            >
-        </button>
-        <div *nzSpaceItem style="position: relative">
-            <button *ngIf="uploading" nz-button nzType="primary" nzLoading>
-                <span nz-icon nzType="poweroff"></span>
-                文件上传中
-            </button>
-            <label *ngIf="!uploading" for="file" style="position: absolute">
-                <div class="fileButton">
-                    <span
-                        nz-icon
-                        nzType="cloud-upload"
-                        nzTheme="outline"
-                    ></span>
-                    导入
-                </div>
-            </label>
-            <input
-                *ngIf="!uploading"
-                type="file"
-                id="file"
-                style="margin-top: 3px; width: 76px"
-                (change)="handleImport($event)"
-            />
-        </div>
+        <app-import *nzSpaceItem  [url]="'validator/import'"></app-import>
+       
         <button
             *nzSpaceItem
             nz-button
@@ -116,9 +91,16 @@
                     <i nz-icon nzType="edit"></i>
                 </a>
                 <nz-divider nzType="vertical"></nz-divider>
-                <a (click)="delete(data.id)">
-                    <i nz-icon nzType="delete"></i>
-                </a>
+                <a
+                nz-popconfirm
+                nzPopconfirmTitle="确定删除?"
+                (nzOnConfirm)="delete(data.id)"
+                (nzOnCancel)="cancel()"
+                nzPopconfirmPlacement="topLeft"
+            >
+                <i nz-icon nzType="delete"></i>
+            </a> 
+               
                 <nz-divider nzType="vertical"></nz-divider>
                 <a *ngIf="!data.disabled" (click)="disable(1, data.id)">
                     启用
