--- a/src/app/device/devices/devices.component.html
+++ b/src/app/device/devices/devices.component.html
@@ -81,10 +81,10 @@
                 (nzCheckedChange)="handleItemChecked(data.id, $event)"
             ></td>
             <td>{{ data.id }}</td>
-            <td>{{ data.product_id }}</td>
-            <td>{{ data.type_id }}</td>
-            <td>{{ data.group_id }}</td>
-            <td>{{ data.area_id }}</td>
+            <td>{{ data.product }}</td>
+            <td>{{ data.type }}</td>
+            <td>{{ data.group }}</td>
+            <td>{{ data.area }}</td>
             <td>{{ data.name }}</td>
             <td>{{ data.desc }}</td>
             <td>
