--- a/src/app/device/device-group/device-group.component.html
+++ b/src/app/device/device-group/device-group.component.html
@@ -9,10 +9,10 @@
             (onSearch)="search($event)"
         ></app-search-box>
         <ng-template [ngIf]="showAddBtn">
-            <!-- <button *nzSpaceItem nz-button nzType="primary" (click)="create()">
+            <button *nzSpaceItem nz-button nzType="primary" (click)="create()">
                 <i nz-icon nzType="plus" [nzSpin]="loading"></i>
                 创建
-            </button> -->
+            </button>
 
             <app-export
                 *nzSpaceItem
