--- a/src/app/device/device-type/device-type.component.html
+++ b/src/app/device/device-type/device-type.component.html
@@ -4,10 +4,10 @@
         <i nz-icon nzType="reload" [nzSpin]="loading"></i>
         刷新
       </button>
-      <!-- <button *nzSpaceItem nz-button nzType="primary" (click)="create()">
+      <button *nzSpaceItem nz-button nzType="primary" (click)="create()">
         <i nz-icon nzType="plus" [nzSpin]="loading"></i>
         创建
-      </button> -->
+      </button>
 
       <app-export *nzSpaceItem  [href]="'/app/classify/api/device/type/export'"></app-export>
    
