--- a/src/app/device/devices/devices.component.html
+++ b/src/app/device/devices/devices.component.html
@@ -82,9 +82,9 @@
             ></td>
             <td>{{ data.id }}</td>
             <td>{{ data.product }}</td>
-            <td>{{ data.type }}</td>
-            <td>{{ data.group }}</td>
-            <td>{{ data.area }}</td>
+            <td>{{ data.type_id }}</td>
+            <td>{{ data.group_id }}</td>
+            <td>{{ data.area_id }}</td>
             <td>{{ data.name }}</td>
             <td>{{ data.desc }}</td>
             <td>
