--- a/src/app/device/select-area/select-area.component.html
+++ b/src/app/device/select-area/select-area.component.html
@@ -33,7 +33,7 @@
                     <th>选择设备</th>
                     <th nzColumnKey="id">设备ID</th>
                     <th nzColumnKey="name">设备名称</th>
-                    <th nzColumnKey="area_id">分区ID</th>
+                    <th nzColumnKey="area_id">区域ID</th>
 
                     <th
                         nzColumnKey="area_id"
@@ -106,10 +106,10 @@
         >
             <thead>
                 <tr>
-                    <th>选择分区</th>
-                    <th nzColumnKey="id">分区ID</th>
+                    <th>选择区域</th>
+                    <th nzColumnKey="id">区域ID</th>
 
-                    <th nzColumnKey="name">分区名称</th>
+                    <th nzColumnKey="name">区域名称</th>
                 </tr>
             </thead>
             <tbody>
