--- a/src/app/device/select-type/select-type.component.html
+++ b/src/app/device/select-type/select-type.component.html
@@ -34,7 +34,7 @@
                     <th>选择设备</th>
                     <th nzColumnKey="id">设备ID</th>
                     <th nzColumnKey="name">设备名称</th>
-                    <th nzColumnKey="type_id">分类ID</th>
+                    <th nzColumnKey="type_id">类型ID</th>
 
                     <th
                         nzColumnKey="type_id"
@@ -107,10 +107,10 @@
         >
             <thead>
                 <tr>
-                    <th>选择分类</th>
-                    <th nzColumnKey="id">分类ID</th>
+                    <th>选择类型</th>
+                    <th nzColumnKey="id">类型ID</th>
 
-                    <th nzColumnKey="name">分类名称</th>
+                    <th nzColumnKey="name">类型名称</th>
                 </tr>
             </thead>
             <tbody>
