--- a/src/app/device/select-group/select-group.component.html
+++ b/src/app/device/select-group/select-group.component.html
@@ -10,6 +10,7 @@
         ></app-search-box>
         <ng-template  [ngIf]="showAddBtn"> </ng-template>
         <button *nzSpaceItem nz-button nzType="primary" (click)="choose()">设备分组</button>
+        <button *nzSpaceItem nz-button nzType="primary" routerLink="/devices">返回</button>
     </nz-space>
 </app-toolbar>
 
