--- a/src/app/device/select-type/select-type.component.html
+++ b/src/app/device/select-type/select-type.component.html
@@ -11,6 +11,7 @@
         <ng-template [ngIf]="showAddBtn"> </ng-template>
 
         <button *nzSpaceItem nz-button nzType="primary" (click)="choose()">设备分类</button>
+          <button *nzSpaceItem nz-button nzType="primary" routerLink="/devices">返回</button>
     </nz-space>
 </app-toolbar>
 
