--- a/src/app/device/devices/devices.component.html
+++ b/src/app/device/devices/devices.component.html
@@ -42,8 +42,7 @@
 <nz-table
     #basicTable
     [nzData]="datum"
-    [nzLoading]="loading"
-    [nzScroll]="getTableHeight()"
+    [nzLoading]="loading" 
     nzShowPagination
     nzShowSizeChanger
     [nzTotal]="total"
@@ -75,7 +74,7 @@
     <tbody>
         <tr
             *ngFor="let data of basicTable.data; let i = index"
-            (dblclick)="open(data.id)"
+            
         >
             <td
                 [nzChecked]="setOfCheckedId.has(data.id)"
@@ -94,10 +93,10 @@
             <td>{{ data.created | date }}</td>
 
             <td *ngIf="!ref">
-                <a (click)="open(data.id)" title="详情">
+                <!-- <a (click)="open(data.id)" title="详情">
                     <i nz-icon nzType="eye"></i>
                 </a>
-                <nz-divider nzType="vertical"></nz-divider>
+                <nz-divider nzType="vertical"></nz-divider> -->
                 <a (click)="edit(data.id)">
                     <i nz-icon nzType="edit"></i>
                 </a>
