--- a/src/app/device/devices/devices.component.html
+++ b/src/app/device/devices/devices.component.html
@@ -46,6 +46,7 @@
     nzShowPagination
     nzShowSizeChanger
     [nzTotal]="total"
+    [nzFrontPagination]="false"
     (nzPageSizeChange)="pageSizeChange($event)"
     (nzPageIndexChange)="pageIndexChange($event)"
     [nzPageSize]="pageSize"
