--- a/src/app/device/device-type/device-type.component.html
+++ b/src/app/device/device-type/device-type.component.html
@@ -28,11 +28,18 @@
   </app-toolbar>
   
   <nz-table
-    #basicTable
-    [nzData]="datum"
-    [nzShowPagination]="false"
-    [nzLoading]="loading" 
-    (nzQueryParams)="onQuery($event)"
+  #basicTable
+  [nzData]="datum"
+  [nzLoading]="loading" 
+  nzShowPagination
+  nzShowSizeChanger
+  [nzTotal]="total"
+  [nzFrontPagination]="false"
+  (nzPageSizeChange)="pageSizeChange($event)"
+  (nzPageIndexChange)="pageIndexChange($event)"
+  [nzPageSize]="pageSize"
+  [nzPageIndex]="pageIndex"
+  (nzQueryParams)="onQuery($event)"
   >
     <thead>
       <tr>
